<resources>
    <string name="app_name">BabyBlue</string>

    <string name="introducao">Você teve um bebê há pouco tempo e gostaríamos de saber como você está se
    sentindo nos últimos sete dias e não apenas hoje:</string>

    <!--Perguntas-->
    <string name="p1">1. Eu tenho sido capaz de rir e achar graça das coisas</string>
    <string name="p2">2. Eu sinto prazer quando penso no que está por acontecer em meu dia-a-dia</string>
    <string name="p3">3. Eu tenho me culpado sem necessidade quando as coisas saem erradas</string>
    <string name="p4">4. Eu tenho me sentido ansiosa ou preocupada sem uma boa razão</string>
    <string name="p5">5. Eu tenho me sentido assustada ou em pânico sem um bom motivo</string>
    <string name="p6">6. Eu tenho me sentido esmagada pelas tarefas e acontecimentos do meu dia-a-dia</string>
    <string name="p7">7. Eu tenho me sentido tão infeliz que eu tenho tido dificuldade de dormir</string>
    <string name="p8">8. Eu tenho me sentido triste ou arrasada</string>
    <string name="p9">9. Eu tenho me sentido tão infeliz que eu tenho chorado</string>
    <string name="p10">10. A idéia de fazer mal a mim mesma passou por minha cabeça</string>

    <!--Respostas-->
    <string name="r1">Como eu sempre fiz</string>
    <string name="r2">Não tanto quanto antes</string>
    <string name="r3">Sem dúvida, menos que antes</string>
    <string name="r4">De jeito nenhum</string>
    <string name="r5">Como sempre senti</string>
    <string name="r6">Talvez, menos que antes</string>
    <string name="r7">Com certeza menos</string>
    <string name="r8">Sim, na maioria das vezes</string>
    <string name="r9">Sim, algumas vezes</string>
    <string name="r10">Não muitas vezes</string>
    <string name="r11">Não, nenhuma vez</string>
    <string name="r12">Não, de maneira alguma</string>
    <string name="r13">Pouquíssimas vezes</string>
    <string name="r14">Sim, muitas vezes</string>
    <string name="r15">Sim. Na maioria das vezes eu não consigo lidar bem com eles</string>
    <string name="r16">Sim. Algumas vezes não consigo lidar bem como antes</string>
    <string name="r17">Não. Na maioria das vezes consigo lidar bem com eles</string>
    <string name="r18">Não. Eu consigo lidar com eles tão bem quanto antes</string>
    <string name="r19">Não, de jeito nenhum</string>
    <string name="r20">Sim, quase todo o tempo</string>
    <string name="r21">De vez em quando</string>
    <string name="r22">Sim, muitas vezes, ultimamente</string>
    <string name="r23">Algumas vezes nos últimos dias</string>
    <string name="r24">Pouquíssimas vezes, ultimamente</string>
    <string name="r25">Nenhuma vez</string>

    <!--Mensagens de Erro-->
    <string name="responderQuestaoAnterior">Responda essa pergunta primeiro!</string>

    <!-- Telefone Maps -->
    <string name="telefone">Contato: </string>

</resources>