<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TesteActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvIntro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:justificationMode="inter_word"
                    android:text="@string/introducao"
                    android:textAlignment="gravity"
                    android:textColor="#424242"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvPerguntas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:justificationMode="inter_word"
                    android:text="@string/p1"
                    android:textAlignment="gravity"
                    android:textColor="#212121"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/rgOpcoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbOp1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/rosa"
                        android:justificationMode="inter_word"
                        android:text="@string/r1"
                        android:textAlignment="gravity"
                        android:textColor="#616161"
                        android:textSize="18dp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/rbOp2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:buttonTint="@color/rosa"
                        android:justificationMode="inter_word"
                        android:text="@string/r2"
                        android:textAlignment="gravity"
                        android:textColor="#616161"
                        android:textSize="18dp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/rbOp3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:buttonTint="@color/rosa"
                        android:justificationMode="inter_word"
                        android:text="@string/r3"
                        android:textAlignment="gravity"
                        android:textColor="#616161"
                        android:textSize="18dp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/rbOp4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:buttonTint="@color/rosa"
                        android:justificationMode="inter_word"
                        android:text="@string/r4"
                        android:textAlignment="gravity"
                        android:textColor="#616161"
                        android:textSize="18dp"
                        android:textStyle="normal" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="50dp"
                android:background="@drawable/ic_botao_voltar"
                android:textAlignment="center"
                android:textColor="#2B2E4A"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnProx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_botao_continuar"
                android:textAlignment="center"
                android:textColor="#2B2E4A"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_botao_finalizar"
                android:textAlignment="center"
                android:textColor="#2B2E4A"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>